[tool.poetry]
name = "NSP-WWO"
version = "0.1.0"
description = ""
authors = [" "]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.20.0"
numba = "^0.54.0"
numexpr = "^2.7.3"
streamlit = "^0.89.0"
pandas = "^1.3.3"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
